# onemcp

./: .editorconfig  .gitignore  LICENSE  README.md  architecture.md  pyproject.toml  requirements.txt  server.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
assets/: explored-mcp-server.json  unexplored-mcp-server.json
assets/test/: explored-mcp-server.json
docs/: fastapi-lifespan-migration.md  onemcp-explorer.md  sandbox.md
hooks/: post-merge  pre-push
scripts/: install-hooks.sh  setup.sh  utils.sh
src/onemcp/: __init__.py  architecture.md  server.py
src/onemcp/discovery/: __init__.py  __main__.py  discovery_api.py  indexing.py  indexing_api.py  mock_registry.py  registry.py  registry_api.py  test_api.py
src/onemcp/discovery/github_extraction/awesome_mcp_servers/: github_utils.py  notebook.ipynb
src/onemcp/discovery/servers/: firstcycling-server.json  google-tasks-server.json  jupyter-notebook-mcp.json  mlb-api-server.json
src/onemcp/orchestration/: orchestration.py  tool_extraction.prompt.md
src/onemcp/registry/: __main__.py  server_registry.py
src/onemcp/sandbox/: __main__.py  api.py  build-base-docker-images.sh  demo-sandbox-discover-api.sh  demo-sandbox-http-api.sh  discovery-prompt-header.md  docker_container.py  docker_sandbox.py  docker_sandbox_registry.py  install_mcp.dockerfile  install_python_mcp.dockerfile  mcp_server.py  sandboxed_mcp_server.py  try-install-mcp-server.sh
src/onemcp/sandbox/docker/: registry.py  sandbox.py
src/onemcp/sandboxing/: __main__.py  discovery-prompt-header.md  mock_sandbox.py  sandbox_api.py
src/onemcp/util/: env.py  onemcp-explorer.py
tests/: __init__.py  test_sandbox.py  test_server.py
